--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,9 +4,8 @@ services:
   - docker:dind
 
 variables:
-  REGISTRY_URL: registry.gitlab.com/fiuba-memo2/ejemplos
-  APP_NAME: telegram-bot-example
-  KUBE_NAMESPACE: docentes
+  REGISTRY_URL: registry.gitlab.com/fiuba-memo2/tp2
+  KUBE_NAMESPACE: volantis
 
 stages:
   - build
@@ -33,10 +32,10 @@ package_job:
   script:
     - VERSION=$(cat VERSION.txt)
     - echo $VERSION
-    - docker build -f Dockerfile.prod --build-arg GIT_COMMIT=$CI_COMMIT_SHORT_SHA -t $REGISTRY_URL/$APP_NAME:$VERSION .
-    - docker tag $REGISTRY_URL/$APP_NAME:$VERSION $REGISTRY_URL/$APP_NAME:latest
-    - docker push $REGISTRY_URL/$APP_NAME:$VERSION
-    - docker push $REGISTRY_URL/$APP_NAME:latest
+    - docker build -f Dockerfile.prod --build-arg GIT_COMMIT=$CI_COMMIT_SHORT_SHA -t $REGISTRY_URL/$CI_PROJECT_NAME:$VERSION .
+    - docker tag $REGISTRY_URL/$CI_PROJECT_NAME:$VERSION $REGISTRY_URL/$CI_PROJECT_NAME:latest
+    - docker push $REGISTRY_URL/$CI_PROJECT_NAME:$VERSION
+    - docker push $REGISTRY_URL/$CI_PROJECT_NAME:latest
   only:
     - tags
 
@@ -48,7 +47,7 @@ deploy_test_job:
     - VERSION=$(cat VERSION.txt)
     - cat ${KUBECONFIG} > $HOME/.kube/config
     - kubectl -n ${KUBE_NAMESPACE} apply -f k8s/test.configmap.yaml
-    - kubectl -n ${KUBE_NAMESPACE} set image deployment/telegrambot telegrambot=$REGISTRY_URL/$APP_NAME:$VERSION
+    - kubectl -n ${KUBE_NAMESPACE} set image deployment/telegrambot telegrambot=$REGISTRY_URL/$CI_PROJECT_NAME:$VERSION
   only:
     - tags
 
@@ -60,7 +59,7 @@ deploy_prod_job:
     - VERSION=$(cat VERSION.txt)
     - cat ${KUBECONFIG} > $HOME/.kube/config
     - kubectl -n ${KUBE_NAMESPACE} apply -f k8s/prod.configmap.yaml
-    - kubectl -n ${KUBE_NAMESPACE} set image deployment/telegrambot telegrambot=$REGISTRY_URL/$APP_NAME:$VERSION
+    - kubectl -n ${KUBE_NAMESPACE} set image deployment/telegrambot telegrambot=$REGISTRY_URL/$CI_PROJECT_NAME:$VERSION
   only:
     - tags
   when: manual
