--- a/k8s/test.configmap.yaml
+++ b/k8s/test.configmap.yaml
@@ -3,6 +3,7 @@ kind: ConfigMap
 metadata:
   name: botconfig
 data:
+  API_URL: ""
   LOG_LEVEL: "1"
   SUMO_SOURCES_JSON: "/config/sumo-sources.json"
   sumo-sources.json: |
@@ -16,7 +17,7 @@ data:
           "multilineProcessingEnabled": false,
           "automaticDateParsing": true,
           "forceTimeZone": false,
-          "category": "bot-collector-container"
+          "category": "test/bot"
         }
     	]
     }
